--- a/index.html
+++ b/index.html
@@ -3,78 +3,177 @@
 <head>
   <meta charset="UTF-8">
   <title>HIGH CHOICE | Luxury International Watches</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
-    /* Premium International Theme */
-    body {font-family:'Helvetica Neue',Arial,sans-serif;margin:0;padding:0;background:#f8f9fa;color:#222;}
-    header {background:#000;color:#fff;padding:20px;text-align:center;font-size:1.8rem;letter-spacing:2px;}
-    nav {display:flex;justify-content:center;background:#111;}
-    nav a {color:#fff;padding:15px 25px;text-decoration:none;text-transform:uppercase;font-weight:600;}
-    nav a:hover {background:#444;}
-    .container {display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:20px;padding:30px;}
-    .card {background:#fff;border-radius:10px;box-shadow:0 5px 15px rgba(0,0,0,0.1);overflow:hidden;transition:transform 0.3s;}
-    .card:hover {transform:translateY(-5px);}
-    .card img,.card video {width:100%;height:250px;object-fit:cover;}
-    .card h3 {margin:15px;font-size:1.2rem;}
-    .card p {margin:0 15px 15px;color:#555;}
-    .card button {display:block;width:90%;margin:10px auto 20px;padding:12px;background:#000;color:#fff;border:none;border-radius:5px;font-weight:bold;cursor:pointer;}
-    .card button:hover {background:#444;}
-    footer {background:#000;color:#fff;text-align:center;padding:20px;margin-top:40px;}
+    :root{
+      --bg:#0a0a0c; --panel:#0f1116; --text:#e6e6ea; --muted:#a7abb3;
+      --border:rgba(255,255,255,0.09); --glass:rgba(255,255,255,0.06);
+      --accent:#7c5cff; --cyan:#00e0ff; --gold:#f5c56d;
+      --shadow:0 20px 42px rgba(0,0,0,0.40);
+    }
+    *{box-sizing:border-box}
+    html,body{height:100%}
+    body{margin:0;font-family:Inter, "Helvetica Neue", Arial, sans-serif;color:var(--text);background:#0a0a0c;overflow-x:hidden}
+
+    /* Ambient background glow */
+    .ambient{position:fixed;inset:0;pointer-events:none;z-index:-1;
+      background:
+        radial-gradient(900px 600px at 15% 20%, rgba(124,92,255,0.22), transparent 60%),
+        radial-gradient(900px 600px at 85% 10%, rgba(0,224,255,0.18), transparent 60%),
+        radial-gradient(900px 800px at 50% 85%, rgba(245,197,109,0.14), transparent 60%);
+      filter:blur(30px); animation:ambient 16s ease-in-out infinite alternate;
+    }
+    @keyframes ambient{0%{transform:translate3d(-10px,-8px,0)}100%{transform:translate3d(10px,8px,0)}}
+
+    /* Header */
+    header{position:sticky;top:0;z-index:20;backdrop-filter:blur(12px);
+      background:linear-gradient(to bottom, rgba(10,10,12,0.85), rgba(10,10,12,0.55));
+      border-bottom:1px solid var(--border);
+    }
+    .topbar{max-width:1200px;margin:0 auto;padding:16px 22px;display:flex;align-items:center;justify-content:space-between}
+    .brand{display:flex;align-items:center;gap:10px}
+    .logo{width:40px;height:40px;border-radius:12px;background:
+      radial-gradient(circle at 30% 30%, #fff 0%, #f5c56d 17%, #7c5cff 45%, #00e0ff 75%, #121425 100%);
+      box-shadow:0 0 18px rgba(124,92,255,0.35), inset 0 0 12px rgba(0,224,255,0.35);
+    }
+    .title{font-weight:900;letter-spacing:1.4px;font-size:1.05rem}
+    nav{display:flex;gap:8px;flex-wrap:wrap}
+    nav a{color:var(--text);text-decoration:none;font-weight:700;font-size:0.95rem;padding:10px 14px;border-radius:12px;border:1px solid transparent;position:relative;overflow:hidden}
+    nav a::before{content:"";position:absolute;inset:0;background:linear-gradient(135deg, rgba(124,92,255,0.18), rgba(0,224,255,0.18));opacity:0;transition:opacity .25s ease}
+    nav a:hover{border-color:var(--border)}
+    nav a:hover::before{opacity:1}
+
+    /* Hero */
+    .hero{padding:70px 22px 32px}
+    .heroWrap{max-width:1200px;margin:0 auto;display:grid;grid-template-columns:1.25fr 1fr;gap:26px}
+    @media (max-width:900px){.heroWrap{grid-template-columns:1fr}}
+    .heroCard{background:linear-gradient(180deg, var(--glass), rgba(255,255,255,0.03));border:1px solid var(--border);border-radius:18px;padding:28px;box-shadow:var(--shadow);transform-style:preserve-3d;perspective:1000px}
+    .hero h1{font-size:2.25rem;line-height:1.12;margin:0 0 10px;font-weight:900;
+      background:linear-gradient(90deg,#fff,#00e0ff 35%,#7c5cff 55%,#f5c56d 85%);-webkit-background-clip:text;background-clip:text;color:transparent}
+    .hero p{color:var(--muted);font-size:1.05rem;margin:0 0 18px}
+    .cta{display:flex;gap:12px;flex-wrap:wrap}
+    .btn{padding:12px 18px;border-radius:12px;border:1px solid var(--border);
+      background:linear-gradient(135deg, rgba(124,92,255,0.35), rgba(0,224,255,0.35));
+      color:#fff;font-weight:800;letter-spacing:0.45px;cursor:pointer;box-shadow:0 10px 25px rgba(0,0,0,0.25);transition:transform .2s ease, box-shadow .2s ease}
+    .btn:hover{transform:translateY(-2px) scale(1.02);box-shadow:0 14px 32px rgba(0,224,255,0.25)}
+    .btnGhost{background:rgba(255,255,255,0.06)}
+
+    .heroVisual{border-radius:18px;overflow:hidden;border:1px solid var(--border);background:#0c0e14;box-shadow:var(--shadow);position:relative}
+    .heroVideo{width:100%;height:100%;display:block;aspect-ratio:16/10;object-fit:cover;opacity:0.9;filter:saturate(1.08) contrast(1.05)}
+    .scanline{position:absolute;inset:0;background:linear-gradient(to bottom, rgba(255,255,255,0) 0%, rgba(255,255,255,0.05) 50%, rgba(255,255,255,0) 100%);mix-blend-mode:overlay;animation:scan 6s linear infinite}
+    @keyframes scan{0%{transform:translateY(-100%)}100%{transform:translateY(100%)}}
+
+    /* Featured video section */
+    .section{max-width:1200px;margin:0 auto;padding:18px 22px}
+    .section h2{font-size:1.6rem;margin:12px 0 18px;font-weight:900;color:#d7dae0}
+    .featured{border:1px solid var(--border);border-radius:16px;overflow:hidden;box-shadow:var(--shadow);background:linear-gradient(180deg, rgba(255,255,255,0.06), rgba(255,255,255,0.03))}
+    .featured video{width:100%;height:auto;display:block}
+
+    /* Feature cards (no prices/models) */
+    .grid{display:grid;gap:20px;grid-template-columns:repeat(3,1fr)}
+    @media (max-width:980px){.grid{grid-template-columns:repeat(2,1fr)}}
+    @media (max-width:640px){.grid{grid-template-columns:1fr}}
+    .card{background:linear-gradient(180deg, rgba(255,255,255,0.06), rgba(255,255,255,0.03));border:1px solid var(--border);border-radius:16px;padding:18px;box-shadow:0 12px 28px rgba(0,0,0,0.28);transition:transform .25s ease}
+    .card:hover{transform:translateY(-4px)}
+    .card h3{margin:0 0 8px;font-weight:900}
+    .card p{margin:0;color:var(--muted)}
+
+    /* Footer */
+    footer{margin-top:32px;border-top:1px solid var(--border);background:linear-gradient(to top, rgba(10,10,12,0.85), rgba(10,10,12,0.55));backdrop-filter:blur(10px);padding:24px;text-align:center;color:#cfd2d8}
   </style>
 </head>
 <body>
-  <header>HIGH CHOICE</header>
-  <nav>
-    <a href="men.html">Men</a>
-    <a href="women.html">Women</a>
-    <a href="kids.html">Kids</a>
-    <a href="about.html">About Us</a>
-    <a href="contact.html">Contact</a>
-  </nav>
+  <div class="ambient" aria-hidden="true"></div>
 
-  <section class="container">
-    <!-- Featured Video 1 -->
-    <div class="card">
-      <video autoplay muted loop>
-        <source src="videos/featured1.mp4" type="video/mp4">
-      </video>
-      <h3>Premium Collections</h3>
-      <p>Explore our international luxury watch brands.</p>
+  <!-- Header -->
+  <header>
+    <div class="topbar">
+      <div class="brand">
+        <div class="logo" aria-hidden="true"></div>
+        <div class="title">HIGH CHOICE</div>
+      </div>
+      <nav>
+        <a href="men.html">MEN</a>
+        <a href="women.html">WOMEN</a>
+        <a href="kids.html">KIDS</a>
+        <a href="about.html">ABOUT US</a>
+        <a href="contact.html">CONTACT</a>
+      </nav>
     </div>
-    <!-- Featured Video 2 -->
-    <div class="card">
-      <video autoplay muted loop>
-        <source src="videos/featured2.mp4" type="video/mp4">
-      </video>
-      <h3>Exclusive Designs</h3>
-      <p>Elegance and precision for every occasion.</p>
-    </div>
-    <!-- Sample Product -->
-    <div class="card">
-      <img src="images/rolex_submariner.jpg" alt="Rolex Submariner">
-      <h3>Rolex Submariner</h3>
-      <p>₹4299</p>
-      <button onclick="openOrder('Rolex Submariner','4299')">Buy Now</button>
+  </header>
+
+  <!-- Hero -->
+  <section class="hero">
+    <div class="heroWrap">
+      <div class="heroCard" id="heroTilt">
+        <h1>International Luxury, Precision & Prestige</h1>
+        <p>Discover timeless collections from the world’s most iconic watchmakers. Premium aesthetics, instant WhatsApp concierge, trusted UPI & COD.</p>
+        <div class="cta">
+          <button class="btn" onclick="scrollToId('featured')">Explore collections</button>
+          <button class="btn btnGhost" onclick="openConcierge()">Concierge on WhatsApp</button>
+        </div>
+      </div>
+      <div class="heroVisual">
+        <video class="heroVideo" autoplay muted loop playsinline>
+          <source src="videos/Featured1.mp4" type="video/mp4">
+        </video>
+        <div class="scanline" aria-hidden="true"></div>
+      </div>
     </div>
   </section>
 
+  <!-- Featured video section -->
+  <section class="section" id="featured">
+    <h2>Featured showcase</h2>
+    <div class="featured">
+      <video autoplay muted loop playsinline>
+        <source src="videos/Featured1.mp4" type="video/mp4">
+      </video>
+    </div>
+  </section>
+
+  <!-- Feature highlights (no prices/models) -->
+  <section class="section">
+    <h2>Highlights</h2>
+    <div class="grid">
+      <div class="card">
+        <h3>Premium collections</h3>
+        <p>Curated international brands crafted for presence and precision.</p>
+      </div>
+      <div class="card">
+        <h3>Exclusive designs</h3>
+        <p>Signature aesthetics for formal, casual, and statement looks.</p>
+      </div>
+      <div class="card">
+        <h3>Trusted experience</h3>
+        <p>Instant WhatsApp concierge, secure UPI, and reliable COD options.</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Footer -->
   <footer>© 2025 HIGH CHOICE. All Rights Reserved.</footer>
 
   <script>
-    function openOrder(productName, price) {
-      const name = prompt("Enter your Name:");
-      const phone = prompt("Enter your Phone:");
-      const address = prompt("Enter your Address:");
-      const city = prompt("Enter your City:");
-      const pincode = prompt("Enter your Pincode:");
-      const payment = prompt("Payment Method (Prepaid/COD):");
+    // Smooth scroll
+    function scrollToId(id){ const el=document.getElementById(id); if(el) el.scrollIntoView({behavior:'smooth',block:'start'}); }
 
-      let message = `Order Details:%0AProduct: ${productName}%0APrice: ₹${price}%0AName: ${name}%0APhone: ${phone}%0AAddress: ${address}, ${city}, ${pincode}%0APayment: ${payment}`;
+    // Concierge flow (basic)
+    function openConcierge(){
+      const msg = encodeURIComponent("Hi, I need assistance with HIGH CHOICE collections.");
+      window.open("https://wa.me/917869288078?text=" + msg, "_blank");
+    }
 
-      if(payment && payment.toLowerCase() === "prepaid"){
-        message += `%0AUPI ID: 7869288078@kotak811`;
-      }
-
-      window.open(`https://wa.me/917869288078?text=${message}`, "_blank");
+    // Gentle hero tilt
+    const heroTilt = document.getElementById('heroTilt');
+    if(heroTilt){
+      const s = 6;
+      heroTilt.addEventListener('mousemove', e=>{
+        const r = heroTilt.getBoundingClientRect(), cx=r.left+r.width/2, cy=r.top+r.height/2;
+        const dx=(e.clientX-cx)/(r.width/2), dy=(e.clientY-cy)/(r.height/2);
+        heroTilt.style.transform=`rotateY(${dx*s}deg) rotateX(${-dy*s}deg)`;
+      });
+      heroTilt.addEventListener('mouseleave', ()=>{ heroTilt.style.transform='none'; });
     }
   </script>
 </body>
