--- a/index.html
+++ b/index.html
@@ -22,8 +22,6 @@
       font-family:'Poppins',sans-serif;
       background:linear-gradient(180deg,var(--bg-1),var(--bg-2));
       color:#fff;
-      -webkit-font-smoothing:antialiased;
-      -moz-osx-font-smoothing:grayscale;
       min-height:100vh;
     }
 
@@ -32,16 +30,16 @@
       position:fixed;top:0;left:0;right:0;height:70px;
       display:flex;align-items:center;justify-content:space-between;
       padding:12px 20px;z-index:80;
-      background:linear-gradient(180deg, rgba(4,6,12,0.55), rgba(4,6,12,0.12));
+      background:rgba(4,6,12,0.55);
       border-bottom:1px solid rgba(255,255,255,0.03);
       backdrop-filter: blur(6px);
     }
     .header-left{display:flex;align-items:center;gap:12px}
-    .logo-img{height:38px; width:auto; object-fit:contain; display:block}
-    .logo-text{color:var(--accent);font-weight:700;font-size:18px;letter-spacing:0.6px}
+    .logo-img{height:38px;object-fit:contain}
+    .logo-text{color:var(--accent);font-weight:700;font-size:18px}
     .hamb{font-size:22px;padding:9px;border-radius:10px;background:rgba(255,255,255,0.02);cursor:pointer}
 
-    /* Side nav */
+    /* Side menu */
     nav{
       position:fixed;top:0;right:-100%;width:74%;max-width:380px;height:100vh;
       background:#071021;padding:44px 22px;z-index:95;transition:0.28s;
@@ -53,15 +51,15 @@
       border-bottom:1px solid rgba(255,255,255,0.02);font-weight:600;margin-bottom:4px;
     }
 
-    main{padding-top:100px;position:relative;z-index:1}
-    .container{max-width:1180px;margin:0 auto;padding:20px}
-
-    /* Background floating glows */
+    /* Background glows */
     .bg { position:fixed; inset:0; z-index:0; pointer-events:none; }
     .glow{ position:absolute;border-radius:50%; filter: blur(60px); opacity:0.95; mix-blend-mode:screen }
     .g1{width:560px;height:300px;left:-6%;top:8%;background:radial-gradient(circle,#7b63ff,transparent 35%);}
     .g2{width:520px;height:280px;right:4%;top:6%;background:radial-gradient(circle,#4bd4ff,transparent 35%);}
     .g3{width:360px;height:220px;left:18%;top:20%;background:radial-gradient(circle,#c26dff,transparent 35%);}
+
+    main{padding-top:100px;position:relative;z-index:1}
+    .container{max-width:1180px;margin:0 auto;padding:20px}
 
     /* Hero */
     .hero{
@@ -69,13 +67,9 @@
       grid-template-columns: 1fr 480px;
       gap:28px;
       align-items:center;
-      margin-top:6px;
     }
-    .hero-left{
-      color:#e9f0ff;
-    }
-    .kicker{color:var(--muted);font-weight:600;letter-spacing:1px}
-    .title{font-size:46px;line-height:1.02;margin:12px 0;color:#fff;font-weight:800;}
+    .kicker{color:var(--muted);font-weight:600}
+    .title{font-size:46px;font-weight:800;margin:12px 0}
     .subtitle{color:var(--muted);max-width:620px;margin-bottom:20px}
 
     .hero-cta{display:flex;gap:12px;flex-wrap:wrap}
@@ -85,78 +79,40 @@
     }
     .btn.secondary{background:transparent;border:1px solid rgba(255,255,255,0.06);color:#dfe9ff}
 
-    /* Hero media (video box) */
-    .hero-right{
-      width:100%;
-      max-width:520px;
-      margin:auto;
-    }
+    /* Featured video box */
     .media-frame{
       border-radius:18px;
-      background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));
       padding:10px;
+      background:rgba(255,255,255,0.02);
       border:1px solid rgba(255,255,255,0.04);
       box-shadow:0 30px 80px rgba(2,6,12,0.7);
     }
     .hero-media{
       width:100%;
       height:420px;
-      border-radius:12px;
       object-fit:cover;
-      display:block;
+      border-radius:12px;
       background:#000;
-    }
-    .hero-video-fallback{
-      width:100%;height:420px;border-radius:12px;background-size:cover;background-position:center;
     }
 
     /* Categories */
     .categories{display:flex;gap:16px;margin-top:30px;flex-wrap:wrap;justify-content:center}
-    .cat{flex:1 1 280px;min-width:240px;background:var(--card);padding:14px;border-radius:14px;border:1px solid rgba(255,255,255,0.04);cursor:pointer;transition:all .25s}
+    .cat{
+      flex:1 1 280px;min-width:240px;background:var(--card);padding:14px;border-radius:14px;
+      border:1px solid rgba(255,255,255,0.04);cursor:pointer;transition:0.25s;
+    }
     .cat:hover{transform:translateY(-6px)}
-    .cat img{width:100%;height:160px;object-fit:cover;border-radius:10px;display:block}
+    .cat img{width:100%;height:160px;object-fit:cover;border-radius:10px}
     .cat h4{margin:10px 0 0;color:var(--muted);font-weight:700}
 
-    /* Featured products */
-    .section-title{display:flex;justify-content:space-between;align-items:center;margin-top:48px}
-    .section-title h3{color:var(--accent);font-size:20px;margin:0}
-    .products{display:flex;flex-wrap:wrap;gap:20px;margin-top:18px;justify-content:center}
-    .product{
-      width:300px;background:var(--card);padding:12px;border-radius:14px;border:1px solid rgba(255,255,255,0.03);box-shadow:0 18px 50px rgba(0,0,0,0.45);
-      transition:transform .25s;
-    }
-    .product:hover{transform:translateY(-8px)}
-    .img-card{width:100%;height:220px;object-fit:cover;border-radius:10px;display:block}
-    .product h4{margin:12px 0 6px}
-    .product p{margin:0;color:var(--muted)}
-    .buy-btn{display:block;margin-top:10px;padding:10px;border-radius:10px;text-align:center;background:var(--accent);color:#050814;text-decoration:none;font-weight:700}
-
-    /* Footer */
-    footer{padding:40px 20px;text-align:center;color:var(--muted);margin-top:48px}
-
-    /* Responsive */
-    @media (max-width:980px){
-      .hero{grid-template-columns: 1fr;gap:18px}
-      .hero-media{height:320px}
-      .img-card{height:180px}
-      .product{width:100%;max-width:420px}
-    }
-    @media (max-width:520px){
-      .logo-text{display:none}
-      header{padding:12px 14px}
-      .hero-media{height:220px}
-      .kicker{font-size:13px}
-      .title{font-size:28px}
-      .subtitle{font-size:14px}
-      .cat img{height:140px}
-    }
+    footer{text-align:center;padding:40px 20px;color:var(--muted)}
   </style>
 </head>
 
 <body>
 
   <!-- Background glows -->
-  <div class="bg" aria-hidden="true">
+  <div class="bg">
     <div class="glow g1"></div>
     <div class="glow g2"></div>
     <div class="glow g3"></div>
@@ -165,15 +121,14 @@
   <!-- Header -->
   <header>
     <div class="header-left">
-      <img class="logo-img" src="images/logo/highchoice_logo.png" alt="HIGH CHOICE Logo" onerror="this.style.display='none'">
+      <img class="logo-img" src="images/logo/highchoice_logo.png" alt="">
       <div class="logo-text">HIGH CHOICE</div>
     </div>
-
     <div class="hamb" onclick="toggleMenu()">☰</div>
   </header>
 
-  <!-- Side nav -->
-  <nav id="menu" aria-hidden="true">
+  <!-- Menu -->
+  <nav id="menu">
     <a href="index.html">Home</a>
     <a href="men.html">Men</a>
     <a href="women.html">Women</a>
@@ -183,16 +138,15 @@
     <a href="return.html">Return Policy</a>
   </nav>
 
-  <!-- Main -->
   <main>
     <div class="container">
 
       <!-- HERO -->
-      <section class="hero" aria-label="Hero">
-        <div class="hero-left">
+      <section class="hero">
+        <div>
           <div class="kicker">PREMIUM LUXURY WATCHES</div>
           <h1 class="title">High Choice — Premium Curated Watches</h1>
-          <p class="subtitle">Handpicked models with showroom-like photography. Browse mens, womens and kids collections — all image-ready and premium presentation.</p>
+          <p class="subtitle">Hand-picked models with premium presentation. Explore Men, Women and Kids exclusive collections.</p>
 
           <div class="hero-cta">
             <a class="btn" href="men.html">Shop Men</a>
@@ -200,97 +154,42 @@
             <a class="btn secondary" href="kids.html">Shop Kids</a>
           </div>
 
-          <!-- small feature highlights -->
+          <!-- ONLY Secure Payments & 7-day Replacement -->
           <div style="display:flex;gap:12px;margin-top:18px;flex-wrap:wrap">
-            <div style="background:rgba(255,255,255,0.02);padding:8px 12px;border-radius:10px;font-weight:600;color:var(--muted)">Free Shipping*</div>
-            <div style="background:rgba(255,255,255,0.02);padding:8px 12px;border-radius:10px;font-weight:600;color:var(--muted)">Secure Payments</div>
-            <div style="background:rgba(255,255,255,0.02);padding:8px 12px;border-radius:10px;font-weight:600;color:var(--muted)">7-day Replacement</div>
+            <div style="background:rgba(255,255,255,0.02);padding:8px 12px;border-radius:10px;color:var(--muted);font-weight:600">Secure Payments</div>
+            <div style="background:rgba(255,255,255,0.02);padding:8px 12px;border-radius:10px;color:var(--muted);font-weight:600">7-day Replacement</div>
           </div>
         </div>
 
-        <div class="hero-right">
-          <div class="media-frame" role="img" aria-label="Featured">
-            <!-- Featured video — keep file name Featured1.mp4 in /videos -->
-            <video class="hero-media" autoplay muted loop playsinline poster="images/hero/hero_poster.jpg">
+        <!-- VIDEO SECTION -->
+        <div>
+          <div class="media-frame">
+            <video class="hero-media" autoplay muted playsinline loop>
               <source src="videos/Featured1.mp4" type="video/mp4">
-              <!-- fallback to image if video missing -->
-              <img class="hero-media hero-video-fallback" src="images/hero/hero_poster.jpg" alt="Featured">
             </video>
           </div>
         </div>
       </section>
 
-      <!-- Categories -->
-      <section style="margin-top:28px">
-        <div style="display:flex;align-items:center;justify-content:space-between">
-          <h2 style="color:var(--accent);margin:0">Shop By Category</h2>
-        </div>
+      <!-- CATEGORIES -->
+      <section style="margin-top:40px">
+        <h2 style="color:var(--accent);text-align:center;margin-bottom:20px">Shop By Category</h2>
 
-        <div class="categories" role="list">
-          <a class="cat" href="men.html" role="listitem">
-            <img class="img-card" src="images/men/men_category.jpg" alt="Men Collection">
+        <div class="categories">
+          <a class="cat" href="men.html">
+            <img src="images/men/men_category.jpg" alt="">
             <h4>Men</h4>
           </a>
 
-          <a class="cat" href="women.html" role="listitem">
-            <img class="img-card" src="images/women/women_category.jpg" alt="Women Collection">
+          <a class="cat" href="women.html">
+            <img src="images/women/women_category.jpg" alt="">
             <h4>Women</h4>
           </a>
 
-          <a class="cat" href="kids.html" role="listitem">
-            <img class="img-card" src="images/kids/kids_category.jpg" alt="Kids Collection">
+          <a class="cat" href="kids.html">
+            <img src="images/kids/kids_category.jpg" alt="">
             <h4>Kids</h4>
           </a>
-        </div>
-      </section>
-
-      <!-- Featured Products -->
-      <section>
-        <div class="section-title">
-          <h3>Featured Picks</h3>
-          <div style="color:var(--muted);font-weight:600">Curated for you</div>
-        </div>
-
-        <div class="products" aria-live="polite">
-          <!-- Rolex example -->
-          <div class="product">
-            <img class="img-card" src="images/rolex/rolex_daytona.jpg" alt="Rolex Daytona">
-            <h4>Rolex Daytona</h4>
-            <p>₹2199</p>
-            <a class="buy-btn" href="rolex.html">View</a>
-          </div>
-
-          <div class="product">
-            <img class="img-card" src="images/omega/omega_speedmaster.jpg" alt="Omega Speedmaster">
-            <h4>Omega Speedmaster</h4>
-            <p>₹4299</p>
-            <a class="buy-btn" href="omega.html">View</a>
-          </div>
-
-          <div class="product">
-            <img class="img-card" src="images/gshock/gshock_gm700.jpg" alt="G-Shock GM700">
-            <h4>G-Shock GM700</h4>
-            <p>₹2399</p>
-            <a class="buy-btn" href="gshock.html">View</a>
-          </div>
-
-          <div class="product">
-            <img class="img-card" src="images/patek/patek_nautilus.jpg" alt="Patek Nautilus">
-            <h4>Patek Nautilus</h4>
-            <p>₹3299</p>
-            <a class="buy-btn" href="patek.html">View</a>
-          </div>
-
-        </div>
-      </section>
-
-      <!-- Why choose us -->
-      <section style="margin-top:36px">
-        <div style="display:flex;gap:18px;flex-wrap:wrap;align-items:center;justify-content:center">
-          <div style="max-width:820px;color:var(--muted);text-align:center">
-            <h3 style="color:var(--accent);margin-bottom:8px">Why HIGH CHOICE?</h3>
-            <p>Premium-inspired watches, trustworthy quality checks, and a premium buying experience. All orders processed securely — COD & Prepaid options available.</p>
-          </div>
         </div>
       </section>
 
@@ -298,32 +197,14 @@
   </main>
 
   <footer>
-    <div style="max-width:1180px;margin:0 auto;padding:30px 20px;color:var(--muted)">
-      <div style="display:flex;flex-direction:column;align-items:center;gap:10px">
-        <img src="images/logo/highchoice_logo.png" alt="HIGH CHOICE" style="height:42px;object-fit:contain" onerror="this.style.display='none'">
-        <div>© HIGH CHOICE — All Rights Reserved</div>
-        <div style="font-size:13px;color:rgba(255,255,255,0.35)">Designed & Curated — Premium Presentation</div>
-      </div>
-    </div>
+    <img src="images/logo/highchoice_logo.png" style="height:42px;opacity:0.8;margin-bottom:10px">
+    <div>© HIGH CHOICE — All Rights Reserved</div>
   </footer>
 
   <script>
     function toggleMenu(){
-      const m = document.getElementById('menu');
-      m.classList.toggle('open');
-      const open = m.classList.contains('open');
-      m.setAttribute('aria-hidden', !open);
+      document.getElementById("menu").classList.toggle("open");
     }
-
-    // small safety: if video missing (e.g. file not uploaded), fallback will show the poster image.
-    (function(){
-      const vid = document.querySelector('.hero-media');
-      if(vid){
-        vid.addEventListener('error', ()=> {
-          // nothing — fallback poster image will remain visible
-        });
-      }
-    })();
   </script>
 
 </body>
